<resources>
    <string name="app_name">Grow Up</string>
    <string name="title_activity_add_entry_view">AddEntryView</string>
    <string name="title_activity_add_goal_view">AddGoalView</string>
    <string name="menu_action_home">Home</string>
    <string name="menu_action_calendar">Calendar</string>
    <string name="menu_action_goal">Goals</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_search">Search</string>
    <string name="add_goal_title_hint">Goal Title</string>
    <string name="add_goal_description_hint">Description</string>
    <string name="spiritual_tag">Spiritual</string>
    <string name="social_tag">Social</string>
    <string name="physical_tag">Physical</string>
    <string name="intellectual_tag">Intellectual</string>
    <string name="add_title">Title</string>
    <string name="add_event_title">Event Title</string>
    <string name="calendar">Calendar</string>
    <string name="date">date</string>
    <string name="add_goal_view_label">New Goal</string>
    <string name="add_entry_view_label">New Entry</string>
    <string name="entry_title">Entry Title</string>
    <string name="entry_note">Note</string>
    <string name="today">today</string>
    <string name="dateToday">today</string>
    <string name="event_title">Events</string>
    <string name="todo_title">To Do</string>
    <string name="notes_title">Notes</string>
    <string name="menu_search">Search</string>
    <string name="menu_browse">Browse</string>
    <string name="menu_settings">Settings</string>
    <string name="searchField">Search</string>
</resources>
