<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_browse"
        android:title="@string/menu_browse"
        android:icon="@drawable/browse"
        android:enabled="true"
        app:showAsAction="always"
        app:labelVisibilityMode="labeled"
        />
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/search"
        android:enabled="true"
        app:showAsAction="always"
        app:labelVisibilityMode="labeled"
        />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/settings"
        android:enabled="true"
        app:showAsAction="always"
        app:labelVisibilityMode="labeled"
        />
    <item
        android:id="@+id/dropdown_menu"
        android:icon="@drawable/ic_menu"
        app:showAsAction="ifRoom"
        android:title="Menu">
    </item>


</menu>
